--- a/views/about.html
+++ b/views/about.html
@@ -36,11 +36,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/categories">Categories</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/items/add">Add Item</a> <!-- Added this line -->
+                    </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
     </nav>
     <div class="container" style="padding-top: 90px;">
         <div class="row">
